LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/Partner_Assistance__c.object-meta.xml
<CustomObject>
    <description>MIS-285: Track partner source or influence on an opportunity.</description>
    <label>Partner Assistance</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Assistances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>