LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/fields/Assistance_Details__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Details__c</fullName>
    <inlineHelpText>Details on the provided assistance.</inlineHelpText>
    <label>Assistance Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>