LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/fields/Assistance_Type__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Type__c</fullName>
    <inlineHelpText>Did the partner source or influence the opportunity?</inlineHelpText>
    <label>Assistance Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Influence</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>