LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/fields/Attribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Amount__c</fullName>
    <description>2020-02-13 - N. Ehrmann - Requested by M. Craver. The interpreted amount according to the % split.</description>
    <formula>(Split__c)*(Opportunity__r.Amount_Total_ARR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>