LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/fields/BD_Owner__c.field-meta.xml
<CustomField>
    <fullName>BD_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-02-13 - N. Ehrmann - Requested by M. Craver. The BD Owner for the Partner Assistance.</description>
    <label>BD Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Assistances</relationshipName>
    <type>Lookup</type>
</CustomField>