LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who at the partner assisted with the opportunity?</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only contacts from the account who provides assistance on the opportunity.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Partner_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Assistances</relationshipLabel>
    <relationshipName>Partner_Assistances</relationshipName>
    <type>Lookup</type>
</CustomField>