LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>MIS-285: Opportunity that got sourced or influenced by a partner</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Partner_Influences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>