LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>MIS-285: Partner account that either influenced or sourced the opportunity.</description>
    <inlineHelpText>What is the partner that sourced or influenced the opportunity?</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Assistances</relationshipLabel>
    <relationshipName>Partner_Influences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>