LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/fields/Split__c.field-meta.xml
<CustomField>
    <fullName>Split__c</fullName>
    <defaultValue>1</defaultValue>
    <description>2020-02-13 - N. Ehrmann - Requested by M. Craver. This allows users to designate a % split for instances in which there is more than one Partner Assistance.</description>
    <label>Split</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>