LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/validationRules/Partner_Source_TOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Source_TOP</fullName>
    <active>false</active>
    <description>MIS-285: Only allows one partner source per opportunity as indicated by the &apos;Assistance Type&apos; field and is calculated on opp level by the &apos;Number of Partner Sources&apos; field.</description>
    <errorConditionFormula>(ISCHANGED( Assistance_Type__c )  || ISNEW()) &amp;&amp; 
 ISPICKVAL(Assistance_Type__c,&quot;Source&quot;) &amp;&amp;
Opportunity__r.Number_of_Partner_Sources__c &gt;= 1</errorConditionFormula>
    <errorMessage>Only one partner source is allowed on the opportunity. Please adjust the &apos;Assistance Type&apos; field if needed.</errorMessage>
</ValidationRule>