LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/validationRules/Primary_Partner_Assistance_FIELD.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Partner_Assistance_FIELD</fullName>
    <active>true</active>
    <description>MIS-285: Checks if the primary partner assistance records already exists.</description>
    <errorConditionFormula>ISCHANGED( Primary__c  ) &amp;&amp; 
Primary__c = true &amp;&amp;
Opportunity__r.Number_of_Primary_Partner_Assistances__c  &gt;= 1</errorConditionFormula>
    <errorDisplayField>Primary__c</errorDisplayField>
    <errorMessage>Only one primary partner assistance (source or influence) on the opportunity is allowed.</errorMessage>
</ValidationRule>