LWCLearnwithFLOWOrg/force-app/main/default/objects/Partner_Assistance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BD_Owner__c</columns>
    <columns>Assistance_Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>